--- a/ship_tracking/frontend/package.json
+++ b/ship_tracking/frontend/package.json
@@ -15,7 +15,9 @@
     "leaflet.animatedmarker": "^1.0.0",
     "vue": "^2.6.11",
     "vue2-leaflet": "^2.7.1",
-    "vue2-leaflet-movingmarker": "^1.1.0"
+    "vue2-leaflet-movingmarker": "^1.1.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
@@ -27,7 +29,11 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.2.2",
     "prettier": "^2.2.1",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32.0",
+    "sass-loader": "^10.0.0",
+    "vue-cli-plugin-vuetify": "~2.4.2",
+    "vue-template-compiler": "^2.6.11",
+    "vuetify-loader": "^1.7.0"
   },
   "eslintConfig": {
     "root": true,
